sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnknownTL/testclient.prog
simstep 48 1
getvariable 0xa2 0x20 xxx
simstep 49 1
